# Platformer

./: CMakeLists.txt  README.md
src/audio/: SoundManager.cpp  SoundManager.hpp
src/core/: Constants.hpp  Debug.cpp  Debug.hpp  Game.cpp  Game.hpp  Position.hpp  Rotation.hpp  Serializable.cpp  Serializable.hpp  Time.hpp  Utility.cpp  Utility.hpp  main.cpp
src/state/: EditorState.cpp  EditorState.hpp  PlayState.cpp  PlayState.hpp  State.hpp  StateManager.cpp  StateManager.hpp
src/state/editor/: EditorCamera.cpp  EditorCamera.hpp  EditorState.cpp  EditorState.hpp
src/state/game/: Enemy.cpp  Enemy.hpp  GameCamera.cpp  GameCamera.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp
src/state/game/enemies/: Enemy.cpp  Enemy.hpp  EnemyFactory.hpp  FlyingEnemy.cpp  FlyingEnemy.hpp
src/world/: Area.cpp  Area.hpp  Pathfinding.cpp  Pathfinding.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  World.cpp  World.hpp
